# Fortran2Rust

./: .env.example  .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
src/fortran2rust/: __init__.py  __main__.py  blas.py  cli.py  config.py  exceptions.py  menu.py  pipeline.py  repair_cache.py
src/fortran2rust/llm/: anthropic_client.py  base.py  factory.py  github_models_client.py  google_client.py  ollama_client.py  openai_client.py  openrouter_client.py
src/fortran2rust/stages/: __init__.py  _bench.py  _llm_cleanup.py  _log.py  s1_analyze.py  s2_benchmarks.py  s3_f2c.py  s4_llm_fix_c.py  s5_c2rust.py  s6_llm_fix_rust.py  s7_llm_safe.py  s8_llm_idiomatic.py  s9_report.py
tests/: test_benchmark_zero_output_detection.py  test_cli_interactive_preserves_menu_selection.py  test_cli_non_interactive_entry_points.py  test_cli_stage2_abort_exit_code.py  test_pipeline_benchmark_gating.py  test_stage1_input_validation.py  test_stage2_fortran_driver_format.py  test_stage4_compile_commands_and_cache_scope.py  test_stage5_stage6_missing_c2rust_module.py  test_stage6_bench_wrapper_bins.py
